Fixed CSS bug with repository name being to long.
Now if repository's name is too long it will be shortened with proper
suffix (...)

--- a/client/app/list-repos/list-repos.less
+++ b/client/app/list-repos/list-repos.less
@@ -33,10 +33,15 @@
             transition: all 0.4s ease;
         }
         > .info {
+            max-width: 60%;
             margin: 6px;
             > .owner {}
             > .name {
+                max-weight: 100%;
+                overflow: hidden;
+                text-overflow: ellipsis;
                 font-weight: bold;
+                white-space: nowrap;
             }
         }
     }
